# django-google-maps-widget

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  settings.py  setup.py  urls.py
.github/workflows/: django.yml  python-publish.yml
django_google_maps/: widgets.py
django_google_maps/static/django_google_maps/js/: google-maps-admin.js
django_google_maps/templates/django_google_maps/widgets/: map_widget.html
django_google_maps/tests/: test_widget.py
django_google_maps_widget/: fields.py  widgets.py
requirements/: test.txt
sample/: admin.py  forms.py
sample/migrations/: 0001_initial.py
