[project]
name = "django-google-maps"
version = "0.14.0"
authors = [
  { name="Aaron Madison", email="aaron.l.madison@gmail.com" },
]
description = "Plugs Google Maps Platform API into Django admin."
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/madisona/django-google-maps"
Issues = "https://github.com/madisona/django-google-maps/issues"

[tool.hatch.envs.test]
dependencies = [
    "flake8",
    "coverage",
    "mock",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]
django = ["4.2.16", "5.0.9", "5.1.2"]

[tool.hatch.envs.test.overrides]
matrix.django.dependencies = [
    { value = "Django==4.2.16", if = ["4.2.16"] },
    { value = "Django==5.0.9", if = ["5.0.9"] },
    { value = "Django==5.1.2", if = ["5.1.2"] }
]

[tool.hatch.envs.test.scripts]
test = "python manage.py test"
lint = "flake8 django_google_maps --max-line-length=120 --max-complexity=4"
test-cov = "coverage run --source=django_google_maps manage.py test"
cov-report = "coverage report --show-missing"
cov = ["test-cov", "cov-report"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
