[project]
name = "django-google-maps-widget"
version = "2.0.0"
authors = [
  { name = "Aaron Madison", email = "aaron.l.madison@gmail.com" },
  { name = "Andrei Mukamolau", email = "amv@bamboogroup.eu" },
]
maintainers = [{ name = "Andrei Mukamolau", email = "amv@bamboogroup.eu" }]
description = "Plugs Google Maps Platform API into Django admin."
readme = "README.rst"
requires-python = ">=3.10"
dependencies = ["Django>=4.2"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/amv-bamboo/django-google-maps-widget"
Issues = "https://github.com/amv-bamboo/django-google-maps-widget/issues"

[tool.hatch.envs.default]
installer = "uv"
path = ".venv"

[tool.hatch.envs.test]
installer = "uv"
dependencies = ["ruff", "coverage", "mock", "mypy", "django-stubs"]

[[tool.hatch.envs.test.matrix]]
python = ["3.12", "3.13", "3.14"]
django = ["4.2", "5.2", "6.0"]

[tool.hatch.envs.test.overrides]
matrix.django.dependencies = [
  { value = "Django==4.2.27", if = [
    "4.2",
  ] },
  { value = "Django==5.2.9", if = [
    "5.2",
  ] },
  { value = "Django==6.0", if = [
    "6.0",
  ] },
]

[tool.hatch.envs.test.scripts]
test = "python manage.py test"
lint = "ruff check"
types = "mypy -m django_google_maps_widget.fields"
test-cov = "coverage run --source=django_google_maps_widget manage.py test"
cov-report = "coverage report --show-missing"
cov = ["test-cov", "cov-report"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C901", "W"]

[tool.ruff.lint.mccabe]
max-complexity = 4

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
